src/mesa/drivers/dri/i965/brw_vec4_visitor.cpp
@@ -534,11 +534,10 @@ vec4_visitor::setup_uniform_clipplane_values()
        * thread.
        */
       int compacted_clipplane_index = 0;
-      for (int i = 0; i < c->key.nr_userclip_plane_consts; ++i) {
-	 if (intel->gen < 6 &&
-	     !(c->key.userclip_planes_enabled_gen_4_5 & (1 << i))) {
+      for (int i = 0; i < MAX_CLIP_PLANES; ++i) {
+	 if (!(c->key.userclip_planes_enabled_gen_4_5 & (1 << i)))
 	    continue;
-	 }
+
 	 this->uniform_vector_size[this->uniforms] = 4;
 	 this->userplane[compacted_clipplane_index] = dst_reg(UNIFORM, this->uniforms);
 	 this->userplane[compacted_clipplane_index].type = BRW_REGISTER_TYPE_F;
